--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.1.0",
   "description": "A react ui kit built with typescript and styled components with customizable style",
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist/**"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c",
+    "dev": "rollup -c -w"
   },
   "repository": {
     "type": "git",
@@ -28,5 +34,29 @@
   "bugs": {
     "url": "https://github.com/asjuanguilherme/react-ui/issues"
   },
-  "homepage": "https://github.com/asjuanguilherme/react-ui#readme"
+  "homepage": "https://github.com/asjuanguilherme/react-ui#readme",
+  "devDependencies": {
+    "@asjuanguilherme/prettier-config": "^1.0.0",
+    "@asjuanguilherme/tsconfig": "^0.1.0",
+    "@babel/core": "^7.23.5",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.5",
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.0",
+    "rollup": "^4.6.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "tslib": "^2.6.2",
+    "typescript": "^5.3.2"
+  },
+  "prettier": "@asjuanguilherme/prettier-config",
+  "publishConfig": {
+    "access": "public"
+  },
+  "peerDependencies": {
+    "styled-components": "^6.1.1"
+  }
 }
