--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "dist/**"
   ],
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w"
+    "clean": "rm -rf ./dist",
+    "build": "yarn clean && rollup -c",
+    "dev": "rollup -c -w",
+    "type:check": "tsc --noEmit"
   },
   "repository": {
     "type": "git",
@@ -39,16 +41,28 @@
     "@asjuanguilherme/prettier-config": "^1.0.0",
     "@asjuanguilherme/tsconfig": "^0.1.0",
     "@babel/core": "^7.23.5",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.5",
+    "@types/lodash": "^4.14.202",
+    "@types/react": "^18.2.40",
+    "@types/react-dom": "^18.2.17",
+    "babel-plugin-styled-components": "^2.1.4",
+    "lodash": "^4.17.21",
+    "next": "^13.5.4",
+    "nookies": "^2.5.2",
     "postcss": "^8.4.32",
     "prettier": "^3.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollup": "^4.6.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
+    "styled-components": "^6.1.1",
     "tslib": "^2.6.2",
     "typescript": "^5.3.2"
   },
@@ -57,6 +71,13 @@
     "access": "public"
   },
   "peerDependencies": {
+    "next": "^13.5.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "styled-components": "^6.1.1"
+  },
+  "dependencies": {
+    "@asjuanguilherme/js-utils": "^0.1.3",
+    "polished": "^4.2.2"
   }
 }
