--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "type:check": "tsc --noEmit"
   },
   "devDependencies": {
+    "@asjuanguilherme/js-utils": "^0.2.2",
     "@asjuanguilherme/prettier-config": "^1.0.0",
     "@asjuanguilherme/tsconfig": "^0.2.1",
-    "@asjuanguilherme/js-utils": "^0.1.3",
     "@babel/core": "^7.23.5",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
@@ -51,32 +51,37 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.5",
+    "@rollup/plugin-url": "^8.0.2",
+    "@types/lodash": "^4.14.202",
+    "@types/react": "^18.2.41",
     "babel-plugin-styled-components": "^2.1.4",
     "lodash": "^4.17.21",
     "next": "^13.5.4",
     "nookies": "^2.5.2",
+    "polished": "^4.2.2",
     "postcss": "^8.4.32",
     "prettier": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^4.6.1",
-    "rollup-plugin-delete": "^2.0.0",
-    "rollup-plugin-dts": "^6.1.0",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.1",
+    "typescript": "^5.3.2"
   },
   "prettier": "@asjuanguilherme/prettier-config",
   "publishConfig": {
     "access": "public"
   },
   "peerDependencies": {
+    "@asjuanguilherme/js-utils": "^0.2.0",
+    "lodash": "^4.17.21",
     "next": "^13.5.4",
     "nookies": "^2.5.2",
+    "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.1",
-    "@asjuanguilherme/js-utils": "^0.1.3",
-    "polished": "^4.2.2"
+    "styled-components": "^6.1.1"
   }
 }
