--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "compilerOptions": {
     "baseUrl": "./src",
-    "noEmit": true,
-    "outDir": "."
+    "outDir": "./dist"
   },
   "extends": "@asjuanguilherme/tsconfig/react-library.json",
-  "include": [".", "src/assets"],
+  "include": [".", "src/assets", "styled.d.ts"],
   "exclude": ["dist", "build", "node_modules"]
 }
