--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@asjuanguilherme/react-ui",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A React UI components library built with TypeScript and styled-components with customizable styles",
   "keywords": [
     "react",
@@ -38,7 +38,7 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "type:check": "tsc --noEmit",
-    "prepublish": "npm run build"
+    "prepublishOnly": "npm run build"
   },
   "devDependencies": {
     "@asjuanguilherme/js-utils": "^0.2.2",
