--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "@rollup/plugin-typescript": "^11.1.5",
     "@rollup/plugin-url": "^8.0.2",
     "@types/lodash": "^4.14.202",
-    "@types/react": "^18.2.41",
+    "@types/react": "^18.2.42",
+    "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "babel-plugin-styled-components": "^2.1.4",
@@ -95,6 +96,8 @@
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.1",
+    "@types/react": "^18.2.42",
+    "@types/react-dom": "^18.2.17"
   }
 }
