--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "dist"
   ],
   "scripts": {
+    "prepare": "husky install",
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "type:check": "tsc --noEmit",
+    "lint": "eslint ./src/**/*{ts,tsx}",
     "prepublishOnly": "npm run build",
-    "lint": "eslint ./src/**/*{ts,tsx}"
+    "format": "prettier --write ."
   },
   "devDependencies": {
     "@asjuanguilherme/eslint-config": "^0.1.0",
@@ -68,6 +70,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.3",
     "lodash": "^4.17.21",
     "next": "^13.5.4",
     "nookies": "^2.5.2",
