--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@asjuanguilherme/react-ui",
-  "version": "0.1.5",
+  "version": "0.2.0",
   "description": "A React UI components library built with TypeScript and styled-components with customizable styles",
   "keywords": [
     "react",
@@ -36,34 +36,24 @@
   ],
   "scripts": {
     "prepare": "husky install",
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
     "type:check": "tsc --noEmit",
     "lint": "eslint ./src/**/*{ts,tsx}",
     "prepublishOnly": "npm run build",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "build": "tsup src/index.ts --format esm,cjs --dts --cjsInterop",
+    "dev": "yarn build --watch",
+    "clean": "rm -rf node_modules && rm -rf dist"
   },
   "devDependencies": {
     "@asjuanguilherme/eslint-config": "^0.1.2",
     "@asjuanguilherme/js-utils": "^0.4.3",
     "@asjuanguilherme/prettier-config": "^1.0.0",
     "@asjuanguilherme/tsconfig": "^0.2.1",
-    "@babel/core": "^7.23.5",
-    "@babel/plugin-transform-react-jsx": "^7.23.4",
-    "@babel/preset-react": "^7.23.3",
-    "@babel/preset-typescript": "^7.23.3",
-    "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^11.1.5",
-    "@rollup/plugin-url": "^8.0.2",
     "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
-    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import-helpers": "^1.3.1",
@@ -86,6 +76,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "styled-components": "^6.1.1",
+    "tsup": "^8.0.1",
     "typescript": "^5.3.2"
   },
   "prettier": "@asjuanguilherme/prettier-config",
@@ -94,14 +85,11 @@
   },
   "peerDependencies": {
     "@asjuanguilherme/js-utils": "^0.2.0",
-    "@types/react": "^18.2.42",
-    "@types/react-dom": "^18.2.17",
     "lodash": "^4.17.21",
     "next": "^13.5.4",
     "nookies": "^2.5.2",
     "polished": "^4.2.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "styled-components": "^6.1.1"
   }
 }
