--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^6.1.1",
+    "tsc-alias": "^1.8.8",
     "tsup": "^8.0.1",
     "typescript": "^5.3.2"
   },
