--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "pretty": true,
     "target": "ESNext",
     "paths": {
-      "~/*": ["src"]
+      "~/*": ["src"],
+      "src/*": ["src"]
     },
     "outDir": "dist"
   },
